--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   ],
   "dependencies": {
     "google-libphonenumber": "^3.2.10",
-    "react-native-country-picker-modal": "git+https://github.com/garganurag893/react-native-phone-number-input/tarball/main"
+    "react-native-country-picker-modal": "git+https://github.com/soham-gadhave/react-native-country-picker-modal.git"
   },
   "devDependencies": {
     "metro-react-native-babel-preset": "^0.61.0"
